# penumbra

./: .bashrc  .dockerignore  .firebaserc  .gitattributes  .gitignore  .gitmodules  COMPATIBILITY.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE-APACHE  LICENSE-MIT  LICENSE.Apache-2.0  LICENSE.md  README.md  \  book.toml  clippy.toml  default.nix  dist-workspace.toml  docker-compose.multinode.override.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  firebase.json  flake.nix  genesis.json  justfile  package-lock.json  package.json  proposal.toml  pull_request_template.md  repro.sh  rust-toolchain.toml
app/: Cargo.toml
app/src/: action_handler.rs  lib.rs  mock_client.rs  temp_storage_ext.rs
app/src/action_handler/: actions.rs  transaction.rs
app/src/app/: mod.rs
app/src/compactblock/: mod.rs  view.rs
app/src/dao/: view.rs
app/src/dex/: arb.rs  component.rs  mod.rs  position_manager.rs  (+3 more)
chain/: Cargo.toml
chain/src/: app_hash.rs  component.rs  epoch.rs  known_assets.rs  lib.rs  note_source.rs  params.rs  quarantined.rs  state_key.rs  sync.rs  view.rs
component/: Cargo.toml
component/src/: action_handler.rs  component.rs  lib.rs  mock_client.rs  temp_storage_ext.rs
crypto/: Cargo.toml
crypto/src/: action.rs  actions.rs  address.rs  addresses.rs  asset.rs  balance.rs  builder.rs  constants.rs  delegation_token.rs  dex.rs  eddy.rs  effect_hash.rs  encrypted_note.rs  error.rs  fee.rs  fixpoint.rs  flow.rs  governance.rs  governance_key.rs  identity_key.rs  keys.rs  lib.rs  memo.rs  merkle.rs  note.rs  note_payload.rs  nullifier.rs  poseidon_hash.rs  prf.rs  proofs.rs  rseed.rs  scratch.rs  sign.rs  stake.rs  swap.rs  symmetric.rs  threshold.rs  transaction.rs  tx.rs  unbonding_token.rs  (+1 more)
custody/: Cargo.toml
custody/src/: client.rs  lib.rs  policy.rs  pre_auth.rs  request.rs  soft_hsm.rs  soft_kms.rs
decaf377-fmd/: Cargo.toml
decaf377-fmd/benches/: fmd.rs
decaf377-fmd/src/: address.rs  clue.rs  clue_key.rs  detection.rs  error.rs  hkd.rs  lib.rs
decaf377-fmd/tests/: fmd.rs
decaf377-ka/: Cargo.toml
decaf377-ka/src/: lib.rs
decaf377-ka/tests/: proptests.rs
eddy/: Cargo.toml
eddy/src/: ciphertext.rs  decryption_share.rs  decryption_table.rs  dkg.rs  encryption_key.rs  key_share.rs  lib.rs  proofs.rs  transcript.rs  value.rs
galileo/: Cargo.toml  README.md
galileo/src/: main.rs
ibc/: Cargo.toml  ibc_token.rs  lib.rs
ibc/src/: channel.rs  client.rs  component.rs  connection.rs  event.rs  ibcaction.rs  lib.rs
measure/: Cargo.toml
measure/src/: main.rs
narsil/: Cargo.toml
narsil/src/: build.rs  metrics.rs
pcli/: Cargo.toml  tmp_wallet.json
pcli-next/: Cargo.toml
pcli-next/src/: command.rs  fetch.rs  legacy.rs  main.rs  network.rs  state.rs  sync.rs  warning.rs
pcli/src/: box_grpc_svc.rs  command.rs  dex_utils.rs  fetch.rs  legacy.rs  main.rs  network.rs  opt.rs  state.rs  sync.rs  wallet.rs  warning.rs
pcli/tests/: network_integration.rs  proof.rs
pclientd/: Cargo.toml
pclientd/src/: lib.rs  main.rs
pclientd/tests/: network_integration.rs
pd/: Cargo.toml  build.rs  sqlx-data.json
pd/migrations/: 20211216025603_init.sql
pd/src/: app.rs  auto_https.rs  components.rs  consensus.rs  db.rs  genesis.rs  info.rs  lib.rs  main.rs  mempool.rs  metrics.rs  pd_metrics.rs  pending_block.rs  request_ext.rs  sequential.rs  snapshot.rs  stake.rs  staking.rs  state.rs  storage.rs  tendermint_proxy.rs  testnet.rs  validator_set.rs  verify.rs  wallet.rs
penumbra/: Cargo.toml  README.md
penumbra-c-bindings/: Cargo.toml  setupTargets.zsh
penumbra-c-bindings/include/: penumbra_c_bindings.h
penumbra-c-bindings/penumbra_c_bindings.xcframework/: Info.plist
penumbra-c-bindings/src/: lib.rs  view.rs
penumbra/src/: app.rs  db.rs  dbschema.rs  dbutils.rs  genesis.rs  lib.rs  state.rs  wallet.rs
penumbrad/: Cargo.toml
proof-params/: Cargo.toml  build.rs
proof-params/benches/: delegator_vote.rs  nullifier_derivation.rs  output.rs  spend.rs  swap.rs  undelegate_claim.rs
proof-params/src/: git_lfs.rs  lib.rs  proving_keys.rs
proto/: Cargo.toml  buf.gen.yaml  buf.work.yaml  buf.yaml  build.rs  build_go_protos.sh  build_swift_protos.sh  justfile  whatif.md
proto/go-proto/: chain.pb.go  crypto.pb.go  custody.pb.go  dex.pb.go  governance.pb.go  ibc.pb.go  sighash.pb.go  stake.pb.go  transaction.pb.go  transparent_proofs.pb.go  view.pb.go  wallet.pb.go
proto/ibc-go-vendor/: buf.yaml
proto/penumbra/: buf.yaml
proto/proto/: buf.yaml  chain.proto  crypto.proto  custody.proto  dex.proto  genesis.proto  governance.proto  ibc.proto  light_client.proto  light_wallet.proto  params.proto  sighash.proto  stake.proto  thin_client.proto  thin_wallet.proto  transaction.proto  transparent_proofs.proto  view.proto  wallet.proto
proto/src/: error.rs  lib.rs  protobuf.rs  serializers.rs  sqlx.rs  state.rs
schema/: Cargo.toml
schema/src/: clap_extracted.rs  convert.rs  lib.rs
shielded-pool/: Cargo.toml
shielded-pool/src/: commission.rs  component.rs  event.rs  lib.rs  state_key.rs
stake/: Cargo.toml
stake/src/: action.rs  changes.rs  commission.rs  component.rs  delegate.rs  epoch.rs  funding_stream.rs  identity_key.rs  info.rs  lib.rs  metrics.rs  rate.rs  rates.rs  status.rs  token.rs  undelegate.rs  uptime.rs  validator.rs  validator_state.rs
storage/: Cargo.toml
storage/src/: app_hash.rs  cache.rs  delta.rs  escaped_byte_slice.rs  future.rs  lib.rs  metrics.rs  overlay_ext.rs  read.rs  snapshot.rs  snapshot_cache.rs  state.rs  state_ext.rs  storage.rs  write.rs
storage/tests/: basic.rs  delta.rs
storage2/: Cargo.toml
storage2/src/: app_hash.rs  lib.rs  metrics.rs  snapshot.rs  state.rs  storage.rs
storage2/tests/: basic.rs
tct-property-test/: Cargo.toml
tct-property-test/src/: lib.rs
tct-property-test/tests/: serialize.proptest-regressions  serialize.rs  spec.rs  witness.proptest-regressions  witness.rs
tct-spec/: Cargo.toml
tct-spec/src/: block.rs  error.rs  index.rs  lib.rs  tree.rs
tct-visualize/: Cargo.toml  build.rs  package.json
tct-visualize/src/: lib.rs
(+3280 files in other folders)
