[package]
name = "penumbra-app"
version = "0.51.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-crypto = { path = "../crypto" }
penumbra-component = { path = "../crates/component" }
penumbra-shielded-pool = { path = "../crates/shielded-pool" }
penumbra-sct = { path = "../crates/sct" }
penumbra-dao = { path = "../crates/dao" }
penumbra-ibc = { path = "../crates/ibc" }
penumbra-compact-block = { path = "../crates/compact-block" }
penumbra-proto = { path = "../proto", features = ["penumbra-storage"] }
penumbra-transaction = { path = "../transaction" }
penumbra-storage = { path = "../storage" }
penumbra-chain = { path = "../chain", features = ["component"] }
penumbra-tct = { path = "../tct" }
penumbra-proof-params = { path = "../proof-params" }

# Penumbra dependencies
decaf377 = { version = "0.4" }
jmt = "0.3"
tokio = { version = "1.21.1", features = ["full", "tracing"] }
async-trait = "0.1.52"
tonic = "0.8.1"
futures = "0.3"
anyhow = "1"
tracing = "0.1"
ark-ff = { version = "0.4", default_features = false }
blake2b_simd = "0.5"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
serde_with = "2.2"
metrics = "0.19.0"
sha2 = "0.9"
serde_json = "1"
serde_unit_struct = "0.1"
bech32 = "0.8"
im = "15.1.0"
regex = "1.5"
once_cell = "1.8"
bitvec = "1"
hex = "0.4"
base64 = "0.20"
tempfile = "3.3.0"
prost = "0.11"
rand_chacha = "0.3"
parking_lot = "0.12"

tendermint = "0.29.0"
tendermint-proto = "0.29.0"
tendermint-light-client-verifier = "0.29.0"
ibc-types = { git = "https://github.com/penumbra-zone/ibc-types", branch = "0.1.x",  version = "0.1.1" }
ibc-proto = "0.26"

[dev-dependencies]
ed25519-consensus = "2"
rand_core = "0.6"
penumbra-tct = { path = "../tct" }
rand_chacha = "0.3"
penumbra-transaction = { path = "../transaction", features = ["parallel"] }
tracing-subscriber = "0.3"

[build-dependencies]
vergen = "5"

[features]
default = ["std"]
std = ["ark-ff/std"]
