[package]
name = "penumbra-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
penumbra-proto = { path = "../proto", features = ["penumbra-storage"] }
penumbra-storage = { path = "../storage" }
penumbra-crypto = { path = "../crypto" }
penumbra-transaction = { path = "../transaction" }
penumbra-tct = { path = "../tct" }

# Penumbra dependencies
decaf377 = { git = "https://github.com/penumbra-zone/decaf377" }
jmt = "0.2.0"

tendermint = "0.29.0"
ibc = { git = "https://github.com/erwanor/ibc-rs", branch = "tendermint-29" }
ics23 = "0.8.1"

# Crates.io deps
ark-ff = "0.3"
anyhow = "1"
bytes = "1"
hex = "0.4"
once_cell = "1.8"
sha2 = "0.9"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.52"
tracing = "0.1"
num-rational = "0.4"
