[package]
name = "penumbra-chain"
version = "0.51.1"
edition = "2021"

[dependencies]
# Workspace dependencies
penumbra-proto = { path = "../proto", default-features = false }
penumbra-storage = { path = "../storage", optional = true }
penumbra-crypto = { path = "../crypto" }
# penumbra-transaction = { path = "../transaction" }
penumbra-tct = { path = "../tct" }

# Penumbra dependencies
decaf377 = "0.3"

tendermint = "0.29.0"
ibc-types = { git = "https://github.com/penumbra-zone/ibc-types", version = "0.1.1" }

ics23 = "0.9.0"

# Crates.io deps
ark-ff = { version = "0.3", default_features = false }
anyhow = "1"
bytes = "1"
hex = "0.4"
once_cell = "1.8"
sha2 = "0.9"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.52"
tracing = "0.1"

[features]
default = ["std", "penumbra-storage"]
std = ["ark-ff/std"]
penumbra-storage = ["dep:penumbra-storage", "penumbra-proto/penumbra-storage"]
