[package]
name = "penumbra-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-crypto = { path = "../crypto" }
penumbra-proto = { path = "../proto" }
penumbra-transaction = { path = "../transaction" }
penumbra-storage = { path = "../storage" }
penumbra-chain = { path = "../chain" }
penumbra-tct = { path = "../tct" }

# Penumbra dependencies
tendermint = { git = "https://github.com/penumbra-zone/tendermint-rs", branch = "penumbra-034" }

decaf377 = { git = "https://github.com/penumbra-zone/decaf377", branch = "groth16-gadgets", features = ["r1cs"] }
jmt = { git = "https://github.com/penumbra-zone/jellyfish-merkle.git", branch = "penumbra-034" }
tokio = { version = "1.21.1", features = ["full", "tracing"] }
async-trait = "0.1.52"
tonic = "0.8.1"
anyhow = "1"
tracing = "0.1"
ark-ff = "0.3"
blake2b_simd = "0.5"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
metrics = "0.19.0"
sha2 = "0.9"
serde_json = "1"
bech32 = "0.8"
regex = "1.5"
once_cell = "1.8"
bitvec = "1"
hex = "0.4"
base64 = "0.13.0"
tempfile = "3.3.0"
prost-types = "0.11"
tendermint-proto = { git = "https://github.com/penumbra-zone/tendermint-rs", branch = "penumbra-034" }
prost = "0.11"
ibc = { git = "https://github.com/penumbra-zone/ibc-rs", branch = "penumbra-034" }
ibc-proto = { git = "https://github.com/penumbra-zone/ibc-rs", branch = "penumbra-034" }
tendermint-light-client-verifier = { git = "https://github.com/penumbra-zone/tendermint-rs", branch = "penumbra-034" }
num-rational = "0.4"

[dev-dependencies]
ed25519-consensus = "2"
rand_core = "0.6"
penumbra-tct = { path = "../tct" }

[build-dependencies]
vergen = "5"
