[package]
name = "penumbra-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-crypto = { path = "../crypto" }
penumbra-proto = { path = "../proto", features = ["penumbra-storage"] }
penumbra-transaction = { path = "../transaction" }
penumbra-storage = { path = "../storage" }
penumbra-chain = { path = "../chain" }
penumbra-tct = { path = "../tct" }

# Penumbra dependencies
decaf377 = { git = "https://github.com/penumbra-zone/decaf377" }
jmt = { git = "https://github.com/penumbra-zone/jmt", branch = "upstream-ics23" }
tokio = { version = "1.21.1", features = ["full", "tracing"] }
async-trait = "0.1.52"
tonic = "0.8.1"
futures = "0.3"
anyhow = "1"
tracing = "0.1"
ark-ff = "0.3"
blake2b_simd = "0.5"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }
serde_with = "2.2"
metrics = "0.19.0"
sha2 = "0.9"
serde_json = "1"
bech32 = "0.8"
regex = "1.5"
once_cell = "1.8"
bitvec = "1"
hex = "0.4"
base64 = "0.13.0"
tempfile = "3.3.0"
prost-types = "0.11"
prost = "0.11"


tendermint = "0.26.0"
tendermint-proto = "0.26.0"
tendermint-light-client-verifier = "0.26.0"
ibc = "0.23.0"
ibc-proto = "0.22.0"

num-rational = "0.4"

[dev-dependencies]
ed25519-consensus = "2"
rand_core = "0.6"
penumbra-tct = { path = "../tct" }
rand_chacha = "0.3"

[build-dependencies]
vergen = "5"
