[package]
name = "penumbra-crypto"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace deps
decaf377-ka = { path = "../decaf377-ka/" }
decaf377-fmd = { path = "../decaf377-fmd/" }
penumbra-proto = { path = "../proto/" }

# Git deps
ark-ff = { git = "https://github.com/penumbra-zone/algebra", branch = "ours" }
ark-serialize = { git = "https://github.com/penumbra-zone/algebra", branch = "ours" }
decaf377 = { git = "https://github.com/penumbra-zone/decaf377" }
decaf377-rdsa = { git = "https://github.com/penumbra-zone/decaf377-rdsa" }
incrementalmerkletree = { git = "https://github.com/penumbra-zone/incrementalmerkletree" }
poseidon377 = { git = "https://github.com/penumbra-zone/poseidon377" }

# Crates.io deps
fpe = "0.5"
aes = "0.7"
anyhow = "1"
thiserror = "1"
bytes = "1"
hex = "0.4"
blake2b_simd = "0.5"
once_cell = "1.8"
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand = "0.8"
# only needed because ark-ff doesn't display correctly
num-bigint = "0.4"
