[package]
name = "penumbra-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace deps
decaf377-ka = { path = "../decaf377-ka/" }
decaf377-fmd = { path = "../decaf377-fmd/" }
penumbra-proto = { path = "../proto/" }
penumbra-tct = { path = "../tct/" }

# Git deps
decaf377 = { git = "https://github.com/penumbra-zone/decaf377", branch = "groth16-gadgets", features = ["r1cs"] }
decaf377-rdsa = { version = "0.5", git = "https://github.com/penumbra-zone/decaf377-rdsa" }
poseidon377 = { git = "https://github.com/penumbra-zone/poseidon377", branch = "main" }
poseidon-paramgen = { git = "https://github.com/penumbra-zone/poseidon377", branch = "main" }
jmt = { git = "https://github.com/penumbra-zone/jellyfish-merkle.git", branch = "penumbra-034" }
f4jumble = { git = "https://github.com/zcash/librustzcash", rev = "2425a0869098e3b0588ccd73c42716bcf418612c" }

# Crates.io deps
ark-ec = "0.3"
ark-ff = "0.3"
ark-std = "0.3"
ark-r1cs-std = "0.3"
ark-serialize = "0.3"
ark-snark = "0.3"
ark-groth16 = "0.3"
ark-relations = "0.3"
regex = "1.5"
sha2 = "0.10.1"
bech32 = "0.8.1"
aes = "0.8.1"
anyhow = "1"
thiserror = "1"
bytes = "1"
derivative = "2.2"
hex = "0.4"
hmac = "0.12.0"
blake2b_simd = "0.5"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.11", features = ["hex"] }
once_cell = "1.8"
pbkdf2 = "0.10.0"
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand = "0.8"
chacha20poly1305 = "0.9.0"
# only needed because ark-ff doesn't display correctly
num-bigint = "0.4"
tracing = "0.1"

[dev-dependencies]
proptest = "1"
bincode = "1"
serde_json = "1"
frost377 = { git = "https://github.com/penumbra-zone/frost377" }
